GetFirst() -> get(0)